--- a/index.html
+++ b/index.html
@@ -31,23 +31,19 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/IMG_0240.JPG" class="image"><img src="images/thumbs/IMG_0240.JPG" alt="" /></a>
-							<h2>Room 1 test</h2>
-							<p>pink paint</p>
+							<h2>Kitchen</h2>
+							<p>Back door</p>
+						</article>
+
+						<article class="thumb">
+							<a href="images/fulls/IMG_0261.JPG" class="image"><img src="images/thumbs/IMG_0261.JPG" alt="" /></a>
+							<h2>Servants Quarters</h2>
+							<p>Original cupboards</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/IMG_0260.JPG" class="image"><img src="images/thumbs/IMG_0260.JPG" alt="" /></a>
 							<h2>Hallway</h2>
 							<p>Into servants quaters</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
@@ -89,6 +85,26 @@
 							<h2>Vehicula id nulla dignissim</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<h2>Vehicula id nulla dignissim</h2>
+							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<h2>Vehicula id nulla dignissim</h2>
+							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<h2>Vehicula id nulla dignissim</h2>
+							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/IMG_0261.JPG" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<h2>Vehicula id nulla dignissim</h2>
+							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+						</article>
 					</div>
 
 				<!-- Footer -->
@@ -96,8 +112,8 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>Paull's Farm formally Home Farm</h2>
+									<p>Leire Lane LE17 5HR.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
