--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<article class="thumb">
 							<a href="images/fulls/IMG_0261.JPG" class="image"><img src="images/thumbs/IMG_0261.JPG" alt="" /></a>
 							<h2>Servants Quarters</h2>
-							<p>Original cupboards</p>
+							<p>The original cupboards</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/IMG_0260.JPG" class="image"><img src="images/thumbs/IMG_0260.JPG" alt="" /></a>
