--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Paull's Farm House</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1>Farm House Leire Lane LE17 5HR</h1>
 						<nav>
+							
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
 							</ul>
@@ -30,35 +31,35 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/IMG_0240.JPG" class="image"><img src="images/thumbs/IMG_0240.JPG" alt="" /></a>
-							<h2>Kitchen</h2>
-							<p>Back door</p>
+							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt="" /></a>
+							<h2>Corner of Leire Lane & Frowlesworth Road</h2>
+							<p>Window onto Leire Lane</p>
 						</article>
 
 						<article class="thumb">
-							<a href="images/fulls/IMG_0261.JPG" class="image"><img src="images/thumbs/IMG_0261.JPG" alt="" /></a>
-							<h2>Servants Quarters</h2>
-							<p>The original cupboards</p>
+							<a href="images/fulls/Bedroom2_1.JPG" class="image"><img src="images/thumbs/Bedroom2_1.JPG" alt="" /></a>
+							<h2>Ensuite bedroom</h2>
+							<p>Window onto Frowlesworth Road</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/IMG_0260.JPG" class="image"><img src="images/thumbs/IMG_0260.JPG" alt="" /></a>
-							<h2>Hallway</h2>
-							<p>Into servants quaters</p>
+							<a href="images/fulls/Bathroom_2.JPG" class="image"><img src="images/thumbs/Bathroom_2.JPG" alt="" /></a>
+							<h2>Bathroom</h2>
+							<p>Window onto farm yard</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/Bedroom3_1.JPG" class="image"><img src="images/thumbs/Bedroom3_1.JPG" alt="" /></a>
+							<h2>Back bedroom</h2>
+							<p>Window onto Dairy</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
+							<h2>Partial party wall with Dairy</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
+							<h2>Box Room between Bedrooms 1 and 4. Potential Jack & Jill bathroom /h2>
+							<p>Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
@@ -127,7 +128,7 @@
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									Paull's Farm
 								</p>
 							</div>
 							<div>
