Main text test is it on the thumb or main pictures?

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/IMG_0261.JPG" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>swap full to thumb</h2>
+							<p>Is this a thumb photo on opening page? </p>
 						</article>
 					</div>
 
