--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Farm House Leire Lane LE17 5HR</h1>
+						<h1>Farm House, Leire Lane LE17 5HR</h1>
 						<nav>
 							
 							<ul>
@@ -32,33 +32,37 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt="" /></a>
-							<h2>Corner of Leire Lane & Frowlesworth Road</h2>
-							<p>Window onto Leire Lane</p>
+							<h2>BEDROOM 1</h2>
+							<p>Window onto Leire Lane & Ashby Road</p>
 						</article>
 
 						<article class="thumb">
 							<a href="images/fulls/Bedroom2_1.JPG" class="image"><img src="images/thumbs/Bedroom2_1.JPG" alt="" /></a>
-							<h2>Ensuite bedroom</h2>
-							<p>Window onto Frowlesworth Road</p>
+							<h2>BEDROOM 2 with ENSUITE [BATHROOM 1]</h2>
+							<p>Field facing window [Ashby Road]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bathroom_2.JPG" class="image"><img src="images/thumbs/Bathroom_2.JPG" alt="" /></a>
-							<h2>Bathroom</h2>
-							<p>Window onto farm yard</p>
+							<h2>BATHROOM 2</h2>
+							<p>Window over farm & fields</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bedroom3_1.JPG" class="image"><img src="images/thumbs/Bedroom3_1.JPG" alt="" /></a>
-							<h2>Back bedroom</h2>
-							<p>Window onto Dairy</p>
+							<h2>BEDROOM 3</h2>
+							<p></p> Small window over corridor
+									Main window facing old barn [new builds 1,3,5,5a Leire Lane]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
-							<h2>Partial party wall with Dairy</h2>
-							<p></p>
+							<h2>BEDROOM 4</h2>
+							<p>Small window at Old Dairy corner
+						       Main window over Leire Lane
+							</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
-							<h2>Box Room between Bedrooms 1 and 4. Potential Jack & Jill bathroom /h2>
+							<h2>BEDROOM 5/BOX ROOM
+								*Jack & Jill bathroom between bedrooms  1 and 4  </h2>
 							<p>Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
