--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
 							<h2>BEDROOM 4</h2>
-							<p>Small window at Old Dairy corner
+							<p>Small window at Old Dairy joining wall
 						       Main window over Leire Lane
 							</p>
 						</article>
@@ -66,39 +66,41 @@
 							<p>Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/images/Kitchen_1.JPG" class="image"><img src="images/thumbs/images/Kitchen_1.JPG" alt="" /></a>
+							<h2>KITCHEN  </h2>
+							<p> Farmyard entrance</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/images/Kitchen_2.JPG" class="image"><img src="images/thumbs/images/Kitchen_2.JPG" alt="" /></a>
+							<h2>KITCHEN</h2>
+							<p>LARGE COMMUNITY SPACE</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/images/Kitchen_3.JPG" class="image"><img src="images/thumbs/images/Kitchen_3.JPG" alt="" /></a>
+							<h2>KITCHEN</h2>
+							<p>Doors access Back-Stairs and main house</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/images/Pantry.JPG" class="image"><img src="images/thumbs/images/Pantry.JPG" alt="" /></a>
+							<h2>PANTRY
+								*Bathroom for Servants Quarters
+							</h2>
+							<p>*BATHROOM FOR SERVANTS QUARTERS</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/images/Reception1_1.JPG" class="image"><img src="images/thumbs/images/Reception1_1.JPG" alt="" /></a>
+							<h2>RECEPTION 1</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/images/images/Reception2_1.JPG" class="image"><img src="images/thumbs/images/Reception2_2.JPG" alt="" /></a>
+							<h2>RECEPTION 2</h2>
+							<p>Small window at Old Dairy joining wall </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/images/Servants_MainWindow.JPG images/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<h2>SERVANTS QUARTERS</h2>
+							<p>Original tiles & fitted cupboards</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
