--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<p>Small window at Old Dairy joining wall </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/Servants_MainWindow.JPG images/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="images/fulls/images/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
 							<h2>SERVANTS QUARTERS</h2>
 							<p>Original tiles & fitted cupboards</p>
 						</article>
