--- a/index.html
+++ b/index.html
@@ -66,39 +66,39 @@
 							<p>Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
-							<a href="images/images/Kitchen_1.JPG" class="image"><img src="images/thumbs/images/Kitchen_1.JPG" alt="" /></a>
+							<a href="images/images/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
 							<h2>KITCHEN  </h2>
 							<p> Farmyard entrance</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/Kitchen_2.JPG" class="image"><img src="images/thumbs/images/Kitchen_2.JPG" alt="" /></a>
+							<a href="images/fulls/Kitchen_2.JPG" class="image"><img src="images/thumbs/Kitchen_2.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
 							<p>LARGE COMMUNITY SPACE</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/Kitchen_3.JPG" class="image"><img src="images/thumbs/images/Kitchen_3.JPG" alt="" /></a>
+							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
 							<p>Doors access Back-Stairs and main house</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/Pantry.JPG" class="image"><img src="images/thumbs/images/Pantry.JPG" alt="" /></a>
+							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry.JPG" alt="" /></a>
 							<h2>PANTRY
 								*Bathroom for Servants Quarters
 							</h2>
 							<p>*BATHROOM FOR SERVANTS QUARTERS</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/Reception1_1.JPG" class="image"><img src="images/thumbs/images/Reception1_1.JPG" alt="" /></a>
+							<a href="images/fulls/Reception1_1.JPG" class="image"><img src="images/thumbs/Reception1_1.JPG" alt="" /></a>
 							<h2>RECEPTION 1</h2>
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/images/Reception2_1.JPG" class="image"><img src="images/thumbs/images/Reception2_2.JPG" alt="" /></a>
+							<a href="images/fulls/Reception2_1.JPG" class="image"><img src="images/thumbs/Reception2_2.JPG" alt="" /></a>
 							<h2>RECEPTION 2</h2>
 							<p>Small window at Old Dairy joining wall </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/images/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/Servants_MainWindow.JPG" alt="" /></a>
+							<a href="images/fulls/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/Servants_MainWindow.JPG" alt="" /></a>
 							<h2>SERVANTS QUARTERS</h2>
 							<p>Original tiles & fitted cupboards</p>
 						</article>
