--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 						<article class="thumb">
 							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry.JPG" alt="" /></a>
 							<h2>PANTRY
-								*Bathroom for Servants Quarters
+								
 							</h2>
-							<p>*BATHROOM FOR SERVANTS QUARTERS</p>
+							<p>*Bathroom for Servants Quarters/Granny flat </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Reception1_1.JPG" class="image"><img src="images/thumbs/Reception1_1.JPG" alt="" /></a>
