--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
 							<h2>BEDROOM 4</h2>
-							<p>Small window at Old Dairy joining wall
+							<p>Small window at Old Dairy party-wall
 						       Main window over Leire Lane
 							</p>
 						</article>
