--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
 							<h2>BEDROOM 4</h2>
-							<p>Small window at Old Dairy party-wall
-						       Main window over Leire Lane
+							<p>Small window at Old Dairy party-wall. Main window over Leire Lane
 							</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
 							<h2>BEDROOM 5/BOX ROOM
-								*Jack & Jill bathroom between bedrooms  1 and 4  </h2>
-							<p>Window onto Leire Lane</p>
+								  </h2>
+							<p>*Jack & Jill bathroom between bedrooms  1 and 4
+							   Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
 							<a href="images/images/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
-							<h2>KITCHEN  </h2>
+							<h2>KITCHEN</h2>
 							<p> Farmyard entrance</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_2.JPG" class="image"><img src="images/thumbs/Kitchen_2.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p>LARGE COMMUNITY SPACE</p>
+							<p>Community Space</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p>Doors access Back-Stairs and main house</p>
+							<p>Door accessing Back-Stairs. Door through to main house</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry.JPG" alt="" /></a>
