--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
-							<h2>BEDROOM 5/BOX ROOM
+							<h2>BEDROOM 5/BOX ROOM *Jack & Jill bathroom between bedrooms  1 and 4
 								  </h2>
-							<p>*Jack & Jill bathroom between bedrooms  1 and 4
-							   Window onto Leire Lane</p>
+							<p>Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
-							<a href="images/images/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
+							<a href="images//fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
 							<p> Farmyard entrance</p>
 						</article>
