--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Farm House, Leire Lane LE17 5HR</h1>
+						<h1>Farm House Leire Lane LE17 5HR</h1>
 						<nav>
 							
 							<ul>
@@ -65,7 +65,7 @@
 							<p>Window onto Leire Lane</p>
 						</article>
 						<article class="thumb">
-							<a href="images//fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
+							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
 							<p> Farmyard entrance</p>
 						</article>
