--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<p>Small window at Old Dairy joining wall </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/Servants_MainWindow.JPG" alt="" /></a>
+							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloor.JPG" alt="" /></a>
 							<h2>SERVANTS QUARTERS</h2>
 							<p>Original tiles & fitted cupboards</p>
 						</article>
@@ -119,7 +119,7 @@
 							<div>
 								<section>
 									<h2>Paull's Farm formally Home Farm</h2>
-									<p>Leire Lane LE17 5HR.</p>
+									<p>Leire Lane LE17 5HR</p>
 								</section>
 								<section>
 								
