--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
 							<h2>BEDROOM 4</h2>
-							<p>Small window at Old Dairy party-wall. Main window over Leire Lane
+							<p> Main window over Leire Lane. Small window at Old Dairy party-wall
 							</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
 							<h2>BEDROOM 5/BOX ROOM *Jack & Jill bathroom between bedrooms  1 and 4
 								  </h2>
-							<p>Window onto Leire Lane</p>
+							<p>Window over Leire Lane</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
