--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloor.JPG" alt="" /></a>
-							<h2>SERVANTS QUARTERS</h2>
+							<h2>RECEPTION 3/SERVANT QUARTERS * Self-contained conversion possiblity using the independant farmyard entrance with configuratio with Old Dairy </h2>
 							<p>Original tiles & fitted cupboards</p>
 						</article>
 						<article class="thumb">
