--- a/index.html
+++ b/index.html
@@ -33,36 +33,35 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom1_1.JPG" class="image"><img src="images/thumbs/Bedroom1_1.JPG" alt="" /></a>
 							<h2>BEDROOM 1</h2>
-							<p>Window onto Leire Lane & Ashby Road</p>
+							<p>Church facing view [Leire Lane/Ashby Road]</p>
 						</article>
 
 						<article class="thumb">
 							<a href="images/fulls/Bedroom2_1.JPG" class="image"><img src="images/thumbs/Bedroom2_1.JPG" alt="" /></a>
 							<h2>BEDROOM 2 with ENSUITE [BATHROOM 1]</h2>
-							<p>Field facing window [Ashby Road]</p>
+							<p>Field facing view [Ashby Road]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bathroom_2.JPG" class="image"><img src="images/thumbs/Bathroom_2.JPG" alt="" /></a>
 							<h2>BATHROOM 2</h2>
-							<p>Window over farm & fields</p>
+							<p>Field and Farmyard facing view [Frowlesworth/Warwickshire</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Bedroom3_1.JPG" class="image"><img src="images/thumbs/Bedroom3_1.JPG" alt="" /></a>
 							<h2>BEDROOM 3</h2>
-							<p></p> Small window over corridor
-									Main window facing old barn [new builds 1,3,5,5a Leire Lane]</p>
+							<p></p> Old barn and field facing view [New builds - 1,3,5,5a Leire Lane - replaced the old barn] and inside window to corridor</p>
 						</article>
+					
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
 							<h2>BEDROOM 4</h2>
-							<p> Main window over Leire Lane. Small window at Old Dairy party-wall
-							</p>
+							<p> Main window street facing [Leire Lane] Small window at yard corner/THE OLD DAIRY party-wall [Countryside view beyond car-park] 
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
-							<h2>BEDROOM 5/BOX ROOM *Jack & Jill bathroom between bedrooms  1 and 4
+							<h2>BEDROOM 5/BOX ROOM *Jack & Jill bathroom between BEDROOMs 1 and 4
 								  </h2>
-							<p>Window over Leire Lane</p>
+							<p>Church facing view [Leire Lane/Ashby Road]</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
@@ -72,12 +71,12 @@
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_2.JPG" class="image"><img src="images/thumbs/Kitchen_2.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p>Community Space</p>
+							<p>Large space lends itself to community</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p>Door accessing Back-Stairs. Door through to main house</p>
+							<p>BACK-STAIRS door + KITCHEN door through to main house</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry.JPG" alt="" /></a>
@@ -94,7 +93,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Reception2_1.JPG" class="image"><img src="images/thumbs/Reception2_2.JPG" alt="" /></a>
 							<h2>RECEPTION 2</h2>
-							<p>Small window at Old Dairy joining wall </p>
+							<p>Small window at yard corner/OLD DAIRY party-wall [Countryside view beyond car-park] </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloor.JPG" alt="" /></a>
