--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Reception1_1.JPG" class="image"><img src="images/thumbs/Reception1_1.JPG" alt="" /></a>
 							<h2>RECEPTION 1</h2>
-							<p></p>
+							<p> Window onto front garden</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Reception2_1.JPG" class="image"><img src="images/thumbs/Reception2_2.JPG" alt="" /></a>
