More text update

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 						<article class="thumb">
 							<a href="images/fulls/Bedroom3_1.JPG" class="image"><img src="images/thumbs/Bedroom3_1.JPG" alt="" /></a>
 							<h2>BEDROOM 3</h2>
-							<p></p> Old barn and field facing view [New builds - 1,3,5,5a Leire Lane - replaced the old barn] and inside window to corridor</p>
+							<p> Old barn and field facing view [New builds - 1,3,5,5a Leire Lane - replaced the old barn] + Inside Corridor Window</p>
 						</article>
 					
 						<article class="thumb">
 							<a href="images/fulls/Bedroom4_1.JPG" class="image"><img src="images/thumbs/Bedroom4_1.JPG" alt="" /></a>
 							<h2>BEDROOM 4</h2>
-							<p> Main window street facing [Leire Lane] Small window at yard corner/THE OLD DAIRY party-wall [Countryside view beyond car-park] 
+							<p>Street corner facing [Leire Lane] + Small window at yard corner/THE OLD DAIRY party-wall [countryside view beyond car-park] 
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
@@ -66,12 +66,12 @@
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p> Farmyard entrance</p>
+							<p> Farmyard entrance door</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_2.JPG" class="image"><img src="images/thumbs/Kitchen_2.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p>Large space lends itself to community</p>
+							<p>Large community kitchen</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt="" /></a>
@@ -93,12 +93,12 @@
 						<article class="thumb">
 							<a href="images/fulls/Reception2_1.JPG" class="image"><img src="images/thumbs/Reception2_2.JPG" alt="" /></a>
 							<h2>RECEPTION 2</h2>
-							<p>Small window at yard corner/OLD DAIRY party-wall [Countryside view beyond car-park] </p>
+							<p>Small window at yard corner/OLD DAIRY party-wall [countryside view beyond car-park] </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloor.JPG" alt="" /></a>
-							<h2>RECEPTION 3/SERVANT QUARTERS * Self-contained conversion possiblity using the independant farmyard entrance with configuratio with Old Dairy </h2>
-							<p>Original tiles & fitted cupboards</p>
+							<h2>RECEPTION 3/SERVANT QUARTERS * Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy </h2>
+							<p>Original tiles & cupboards</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
