more text and testing Kitchen 2 image

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
-							<h2>KITCHEN</h2>
-							<p> Farmyard entrance door</p>
+							<h2>KITCHEN entrance</h2>
+							<p> Farmyard door and cooking range</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_2.JPG" class="image"><img src="images/thumbs/Kitchen_2.JPG" alt="" /></a>
 							<h2>KITCHEN</h2>
-							<p>Large community kitchen</p>
+							<p>Large community space</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt="" /></a>
-							<h2>KITCHEN</h2>
+							<h2>KITCHEN stair door</h2>
 							<p>BACK-STAIRS door + KITCHEN door through to main house</p>
 						</article>
 						<article class="thumb">
