remove swap.html

--- a/index.html
+++ b/index.html
@@ -106,9 +106,14 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/IMG_0261.JPG" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>swap full to thumb</h2>
-							<p>Is this a thumb photo on opening page? </p>
+							<a href="images/fulls/
+								
+								" class="image"><img src="images/thumbs/
+											" alt="" /></a>
+							<h2>
+								</h2>
+							<p>
+								</p>
 						</article>
 					</div>
 
