--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<p>Original tiles & cupboards</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_MainWindow.JPG" alt="" /></a>
+							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloorThumb.jpg" alt="" /></a>
 							<h2>Vehicula id nulla dignissim</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
