more thumb servant

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloorThumb.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>RECEPTION 3/SERVANT QUARTERS</h2>
+							<p>* Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/
