--- a/index.html
+++ b/index.html
@@ -106,12 +106,9 @@
 							<p>* Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/
+							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_Quarters_brightwindows.jpeg" alt="" /></a>
+							<h2>* Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</h2>
 								
-								" class="image"><img src="images/thumbs/
-											" alt="" /></a>
-							<h2>
-								</h2>
 							<p>
 								</p>
 						</article>
