--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Servants_MainWindow.JPG" class="image"><img src="images/thumbs/Servants_Quarters_brightwindows.jpeg" alt="" /></a>
-							<h2>* Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</h2>
+							<h2>SERVANT QUARTERS * Self-contained conversion possiblity using independant farmyard entrance configured with Old Dairy</h2>
 								
 							<p>
 								</p>
