--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h2>PANTRY
 								
 							</h2>
-							<p>*Bathroom for Servants Quarters/Granny flat </p>
+							<p>*Bathroom possibility for SERVANT QUARTERS/Granny flat </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Reception1_1.JPG" class="image"><img src="images/thumbs/Reception1_1.JPG" alt="" /></a>
