top pantry ruin?

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry.JPG" alt="" /></a>
-							<h2>PANTRY
-								
-							</h2>
+							<h2>PANTRY</h2>
+		
 							<p>*Bathroom possibility for SERVANT QUARTERS/Granny flat </p>
 						</article>
 						<article class="thumb">
