--- a/index.html
+++ b/index.html
@@ -114,8 +114,15 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Paull's Farm formally Home Farm</h2>
-									<p>Leire Lane LE17 5HR</p>
+									<h2>Paull's Farm (formally Home Farm) Ashby Parva LE17 5HR</h2>
+									<p>Unmodernised Grade 2 listed farmhouse 
+10 rooms (5 up 5 down) 
+HUGE kitchen
+2 staircases
+Only 2.5 terrible bathrooms ATM but space for loads more!
+Communal gardens
+Shared court yard/farm yard 
+Outbuildings, workshops/stables & fields TBD </p>
 								</section>
 								<section>
 								
