--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Farm House Leire Lane LE17 5HR</h1>
+						<h1>Farmhouse Ashby Parva LE17 5HR</h1>
 						<nav>
 							
 							<ul>
