--- a/index.html
+++ b/index.html
@@ -114,15 +114,17 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Paull's Farm (formally Home Farm) Ashby Parva LE17 5HR</h2>
+									<h2>Paull's Farmhouse (formally Home Farm) Ashby Parva LE17 5HR</h2>
 									<p>Unmodernised Grade 2 listed farmhouse 
-10 rooms (5 up 5 down) 
+Unmodernised farmhouse 10 rooms (5 up 5 down) 
 HUGE kitchen
 2 staircases
-Only 2.5 terrible bathrooms ATM but space for loads more!
-Communal gardens
-Shared court yard/farm yard 
-Outbuildings, workshops/stables & fields TBD </p>
+Only 2.5 terrible bathrooms at the moment but space for more
+Farmyard entrance with Utility room and Cloakroom toilet. Spacious with storage. 
+									
+Standalone house with Communal Gardens & Courtyard/Farmyard 
+
+Negotiation for use of Outbuildings, Barn, Fields, Workshops, Stables possible via consulting agents and seller [seller is landlord of adjacent tenanted proerties]  </p>
 								</section>
 								<section>
 								
