--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_1.JPG" class="image"><img src="images/thumbs/Kitchen_1.JPG" alt="" /></a>
-							<h2>KITCHEN entrance</h2>
+							<h2>KITCHEN </h2>
 							<p> Farmyard door and cooking range</p>
 						</article>
 						<article class="thumb">
@@ -75,7 +75,7 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Kitchen_3.JPG" class="image"><img src="images/thumbs/Kitchen_3.JPG" alt="" /></a>
-							<h2>KITCHEN stair door</h2>
+							<h2>KITCHEN</h2>
 							<p>BACK-STAIRS door + KITCHEN door through to main house</p>
 						</article>
 						<article class="thumb">
@@ -116,7 +116,7 @@
 								<section>
 									<h2>Paull's Farmhouse (formally Home Farm) Ashby Parva LE17 5HR</h2>
 									<p>Unmodernised Grade 2 listed farmhouse 
-Unmodernised farmhouse 10 rooms (5 up 5 down) 
+10 rooms (5 up 5 down) 
 HUGE kitchen
 2 staircases
 Only 2.5 terrible bathrooms at the moment but space for more
