Remove unused images, form

--- a/index.html
+++ b/index.html
@@ -126,33 +126,20 @@ Standalone house with Communal Gardens & Courtyard/Farmyard
 
 Negotiation for use of Outbuildings, Barn, Fields, Workshops, Stables possible via consulting agents and seller [seller is landlord of adjacent tenanted proerties]  </p>
 								</section>
-								<section>
-								
-								</section>
+
 								<p class="copyright">
 									Paull's Farm
 								</p>
 							</div>
 							<div>
 								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
+									<h2>Contact</h2>
+									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
+									<p></p>
+										<div class="image">
+										<img src="images/fulls/Servants_MainWindow.JPG" alt="" style="width: 250px;">
 										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
+
 								</section>
 							</div>
 						</div>
