Add exterior pic

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Negotiation for use of Outbuildings, Barn, Fields, Workshops, Stables possible v
 									<a href="mailto:superior.uk@gmail.com">superior.uk@gmail.com</a>
 									<p></p>
 										<div class="image">
-										<img src="images/fulls/Servants_MainWindow.JPG" alt="" style="width: 250px;">
+										<img src="images/outside.png" alt="" style="width: 35rem;">
 										</div>
 
 								</section>
