--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<p>BACK-STAIRS door + KITCHEN door through to main house</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Servants_Stairs.JPG" class="image"><img src="images/thumbs/ServantStairThumb2.jpeg" alt="" /></a>
+							<a href="images/fulls/Servants_Stairs.JPG" class="image"><img src="images/thumbs/ServantStairThumb 2.jpeg" alt="" /></a>
 							<h2>BACK-STAIRS</h2>
 							<p>Stairway to BATHROOM 2 and corridor to BEDROOMS and loft/roof access</p>
 						</article>
