Reception1_1_newstraight.JPG

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 							<p>Stairway to BATHROOM 2 and corridor to BEDROOMS and loft/roof access</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry.JPG" alt="" /></a>
+							<a href="images/fulls/Pantry.JPG" class="image"><img src="images/thumbs/Pantry_straight.JPG" alt="" /></a>
 							<h2>PANTRY</h2>
 		
 							<p>*Bathroom possibility for SERVANT QUARTERS/Granny flat </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Reception1_2.JPG" class="image"><img src="images/thumbs/Reception1_1_new.JPG" alt="" /></a>
+							<a href="images/fulls/Reception1_1_newstraight.JPG" class="image"><img src="images/thumbs/Reception1_1_newstraight.JPG" alt="" /></a>
 							<h2>RECEPTION 1</h2>
 							<p> Window onto front garden</p>
 						</article>
