--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<p>Street corner facing [Leire Lane] + Small window at yard corner/THE OLD DAIRY party-wall [countryside view beyond car-park] 
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/BoxRoom.JPG" class="image"><img src="images/thumbs/BoxRoom.JPG" alt="" /></a>
+							<a href="images/fulls/BoxRoom.png" class="image"><img src="images/thumbs/BoxRoom.png" alt="" /></a>
 							<h2>BEDROOM 5/BOX ROOM *Jack & Jill bathroom between BEDROOMs 1 and 4
 								  </h2>
 							<p>Church facing view [Leire Lane/Ashby Road]</p>
@@ -85,7 +85,7 @@
 							<p>*Bathroom possibility for SERVANT QUARTERS/Granny flat </p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Reception1_2.JPG" class="image"><img src="images/thumbs/Reception1_1_new.JPG" alt="" /></a>
+							<a href="images/fulls/Reception1_2.JPG" class="image"><img src="images/thumbs/Reception1_2.JPG" alt="" /></a>
 							<h2>RECEPTION 1</h2>
 							<p> Window onto front garden</p>
 						</article>
@@ -96,7 +96,7 @@
 						</article>
 				
 						<article class="thumb">
-							<a href="images/fulls/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloorThumb.jpg" alt="" /></a>
+							<a href="images/fulls/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloor.jpg" alt="" /></a>
 							<h2>RECEPTION 3 [SERVANT QUARTERS]</h2>
 							<p></p>
 						</article>
