--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
 							<h2>RECEPTION 2</h2>
 							<p>Small window at yard corner/OLD DAIRY party-wall [countryside view beyond car-park] </p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/Reception2_1.JPG" class="image"><img src="images/thumbs/Reception2_1.JPG" alt="" /></a>
+							<h2>RECEPTION 2</h2>
+							<p>Window onto road </p>
+						</article>
 				
 						<article class="thumb">
 							<a href="images/fulls/Servants_OriginalFloor.JPG" class="image"><img src="images/thumbs/Servants_OriginalFloorThumb.JPG" alt=""></a>
