--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<article class="thumb">
 							<a href="images/fulls/Reception2_1.JPG" class="image"><img src="images/thumbs/Reception2_1.JPG" alt="" /></a>
 							<h2>RECEPTION 2</h2>
-							<p>Window onto road </p>
+							<p>Church facing view</p>
 						</article>
 				
 						<article class="thumb">
